<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="91dp">

        <ImageButton
            android:id="@+id/login_register_exit"
            android:background="@null"
            android:src="@drawable/login_exit_back"
            android:layout_width="36dp"
            android:layout_height="51dp" />

        <TextView
            android:textColor="@android:color/white"
            android:paddingLeft="12dp"
            android:textSize="20sp"
            android:text="@string/user_register_login_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/login_register_label"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="12dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/user_login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/login_register_switch"
            android:paddingTop="24dp"
            android:paddingRight="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/user_login_to_register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.wobi.android.wobiwriting.views.ClearEditText
            android:id="@+id/phone"
            android:hint="@string/user_phone_hint"
            android:layout_marginTop="85dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.wobi.android.wobiwriting.views.ClearEditText
            android:id="@+id/password"
            android:hint="@string/user_password_hint"
            android:layout_below="@id/phone"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/forgetPassword"
            android:text="忘记密码"
            android:layout_below="@id/password"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.wobi.android.wobiwriting.views.ClearEditText
            android:layout_marginTop="5dp"
            android:id="@+id/confirm_password"
            android:hint="@string/user_confirm_password_hint"
            android:layout_below="@id/password"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_below="@id/confirm_password"
            android:id="@+id/request_code_layout"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/register_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/register_scan_icon"/>

            <com.wobi.android.wobiwriting.views.ClearEditText
                android:id="@+id/request_code"
                android:layout_toLeftOf="@id/register_scan"
                android:hint="@string/user_request_code_hint"
                android:layout_marginRight="12dp"
                android:singleLine="true"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:id="@+id/login_or_register"
            android:layout_width="match_parent"
            android:background="@android:color/holo_red_light"
            android:layout_height="52dp"
            android:textSize="18sp"
            android:text="@string/user_login_label"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>