<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customer="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/ic_launcher"
            android:text="user_icon" />
    </FrameLayout>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="马老师" />

    <TextView
        android:id="@+id/user_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="语文 小学" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/moments_num_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/moments_num_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/moment_num_title" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/follow_num_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/flollow_num_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/follow_num_title" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/wodou_num_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wodou_num_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/wodou_num_title" />
        </LinearLayout>
    </LinearLayout>

    <com.wobi.android.wobiwriting.views.CustomSettingBar
        android:id="@+id/share_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/customer_setting_bar_margin_size"
        customer:leftTextValue="@string/share_the_app_to_others_title"
        customer:leftIconVisible="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <com.wobi.android.wobiwriting.views.CustomSettingBar
        android:id="@+id/user_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        customer:leftIconVisible="true"
        customer:leftTextValue="@string/activity_feedback_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <com.wobi.android.wobiwriting.views.CustomSettingBar
        android:id="@+id/account_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        customer:leftIconVisible="true"
        customer:leftTextValue="@string/account_exit_title" />

</LinearLayout>
