<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/get_verify_code_back"
        android:layout_marginTop="18dp"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/get_verify_code_back_arrow"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/user_get_verify_code_title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.wobi.android.wobiwriting.views.ClearEditText
        android:layout_marginTop="30dp"
        android:id="@+id/phone_code"
        android:hint="@string/user_get_verify_code_hint"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:singleLine="true"
        android:inputType="number"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_marginTop="27dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/code_send_label"
            android:textSize="16sp"
            android:textColor="#b8b8b8"
            android:text="@string/user_get_verify_code_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/code_send_phone"
            android:layout_toRightOf="@id/code_send_label"
            android:textSize="16sp"
            android:textColor="#878787"
            android:text="+8615811800036"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:id="@+id/send"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="发送"
            android:textSize="18sp"
            android:textColor="@android:color/holo_red_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/re_send"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="重新发送"
            android:textSize="18sp"
            android:textColor="#9e9e9e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/countdown"
            android:text=" ( 60s ) "
            android:textSize="18sp"
            android:textColor="#ff9290"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>